# redspot

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  Dockerfile  LICENSE.md  README.md  eslint.config.mjs  kernel-deps.txt  kernel-install.sh  kernel-upgrade.sh  package.json  pdm-deps.txt  pdm-install.sh  pdm-upgrade.sh  playwright.config.mjs  pyproject.toml  schema-json.ts  schema-table.py  tsconfig.eslint.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  ghcr.yml
jupyter/: jupyter_server_config.json
jupyter/labconfig/: page_config.json
kernel/: install.sh  pyproject.toml
redspot/: __init__.py  __main__.py  command.py  database.py  datafilter.py  datafilters.py  dataloader.py  extension.py  load.py  notebook.py  record.py  replay.py
redspot-diffview/: build.py  script.js  style.css
redspot-frontend/: index.ts  jsonify.ts  record.ts  types.ts
test/: e2e.spec.ts  expected.sqlite3  test.spec.ts  tests.py  tests.spec.ts  util.ts
tests/: tests.py  tests.spec.ts  x.db
tests/x/: 0.ipynb  1.ipynb  2.ipynb
tests/x/2024-0822-0146_9b614f7a3a9a409aa00fda8d62cb58fd/: 0.ipynb  1.ipynb  2.ipynb
