[project]
name = "redspot"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["notebook>=7.2.1", "nbdime>=4.0.1"]

[project.scripts]
redspot = "redspot.__main__:main"

[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5",
  "hatch-nodejs-version>=0.3.2"
]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
  "ruff>=0.5.7",
  "setuptools>=72.2.0",
  "pytest-cov>=5.0.0",
  "pytest>=8.3.2"
]

[tool.pdm.scripts]
check.composite = [
  "jlpm run eslint .",
  "jlpm run prettier --check .",
  "ruff check ."
]
fix.composite = [
  "jlpm run eslint --fix .",
  "jlpm run prettier --write .",
  "ruff format ."
]
test.composite = [
  "jlpm playwright install --with-deps chromium",
  "jlpm playwright test",
  "pytest"
]
coverage.cmd = "pytest --cov --cov-report=html --cov-report=term --cov-report=xml"

[tool.hatch.build.targets.wheel.shared-data]
"labextension" = "share/jupyter/labextensions/redspot"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = ["jlpm"]
build_cmd = "build:prod"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
npm = ["jlpm"]
build_cmd = "build"
build_dir = "labextension"
source_dir = "redspot-frontend"

[tool.hatch.version]
source = "nodejs"

[tool.pytest.ini_options]
addopts = "-vv"
filterwarnings = "error"

[tool.coverage.run]
branch = true
